apply plugin: 'java'
apply plugin: 'idea'

version = '1.0.0'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.4.2'
    compile('ch.qos.logback:logback-classic:1.2.3')
    testCompile("org.assertj:assertj-core:3.11.1")
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD

}
=======
}
>>>>>>> a101753... feat : Do Mission3
=======
=======
>>>>>>> 8a78563... feat : Do Mission2
}
=======
    //testCompile 'junit:junit:4.12'
    testCompile 'org.junit.jupiter:junit-jupiter:5.4.2'
}
>>>>>>> rebase mission3
<<<<<<< HEAD
>>>>>>> 5913482... rebase mission3
=======
=======

}
<<<<<<< HEAD
>>>>>>> feat : Do Mission2
<<<<<<< HEAD
>>>>>>> 8a78563... feat : Do Mission2
=======
=======
>>>>>>> Dion이 리뷰해주신 내용 반영하다.
>>>>>>> 4e4c335... Dion이 리뷰해주신 내용 반영하다.
